--- a/css/themes.css
+++ b/css/themes.css
@@ -36,7 +36,7 @@
     --text-header: #ffffff;
     --text-accent: #64b5f6;
     --text-temperature: #4fc3f7;
-    --text-success: #81c784;
+    --text-success: #666666;
     --text-error: #e57373;
     
     --border-color: #444444;
