--- a/css/themes.css
+++ b/css/themes.css
@@ -72,7 +72,7 @@ input[type="text"]:focus {
 }
 
 .primary-btn {
-    background-color: #4caf50;
+    background-color: #777777;
     color: black;
     border: none;
     padding: 12px 24px;
@@ -112,7 +112,7 @@ input[type="text"]:focus {
 }
 
 .test-btn:hover {
-    background-color: #45a049;
+    background-color: #111a7a;
 }
 
 .danger-btn {
